Borro comentarios que quedaron innecesarios

--- a/Op_Type Analysis.ipynb
+++ b/Op_Type Analysis.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "#import matplotlib as mp\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -228,7 +227,6 @@
     "opTypes = opportunities[[\"Opportunity_Type\",\"Opportunity_ID\"]].groupby(\"Opportunity_Type\").agg({\"Opportunity_ID\":\"count\"})\n",
     "opTypes.rename(columns={\"Opportunity_ID\":\"Cantidad\"},inplace=True)\n",
     "opTypes.reset_index(inplace=True)\n",
-    "#opTypes = opTypes[opTypes[\"Cantidad\"] > 100]\n",
     "opTypes[\"Opportunity_Type\"] = opTypes[\"Opportunity_Type\"].apply(lambda x: x.replace(\"Opportunity_Type_\",\"\"))\n",
     "opTypes.sort_values(by=\"Cantidad\",inplace=True,ascending=False)\n",
     "opTypes"
@@ -272,8 +270,7 @@
     "plot = sns.barplot(x=\"Opportunity_Type\",y=\"Cantidad\",data=opTypes,order=opTypes[\"Opportunity_Type\"], palette=colores)\n",
     "plt.xlabel(\"Tipo de Oportunidad\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Frecuencia de Opportunity Type\")\n",
-    "plt.savefig(\"img/OpType/CantidadOpTypeSinFiltrar.png\")#,bbox_inches=tr.Bbox([[0, -0.3],[6,4]]))\n",
+    "plt.savefig(\"img/OpType/CantidadOpTypeSinFiltrar.png\")\n",
     "plt.show(plot)\n",
     "\n",
     "saltos = np.linspace(0.7,0.3,7)\n",
@@ -282,8 +279,7 @@
     "plot2 = sns.barplot(x=\"Opportunity_Type\",y=\"Cantidad\",data=opTypes,order=opTypes[\"Opportunity_Type\"], palette=colores)\n",
     "plt.xlabel(\"Tipo de Oportunidad\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Frecuencia de Opportunity Type\")\n",
-    "plt.savefig(\"img/OpType/CantidadOpType.png\")#,bbox_inches=tr.Bbox([[0, -0.3],[6,4]]))\n",
+    "plt.savefig(\"img/OpType/CantidadOpType.png\")\n",
     "plt.show(plot2)"
    ]
   },
@@ -430,20 +426,6 @@
     }
    ],
    "source": [
-    "#opTypeVsStage = opportunities.groupby([\"Opportunity_Type\",\"Stage\"]).agg({\"Opportunity_ID\":\"count\"})#Consigo la cantidad de veces de cada OT por cada source\n",
-    "#opTypeVsStage = opTypeVsStage.reset_index()\n",
-    "#opTypeVsStage[\"Opportunity_Type\"] = opTypeVsStage[\"Opportunity_Type\"].apply(lambda x: x.replace(\"Opportunity_Type_\",\"\"))\n",
-    "#opTypeVsStage.rename(columns={\"Opportunity_ID\":\"Cantidad\"},inplace = True)\n",
-    "#total = opTypeVsStage.groupby(\"Opportunity_Type\").agg({\"Cantidad\":\"sum\"}) #La cantidad total de veces que aparece OT\n",
-    "#opTypeVsStage.set_index(\"Opportunity_Type\",inplace=True)\n",
-    "#opTypeVsStage[\"Total\"] = total[\"Cantidad\"]\n",
-    "#opTypeVsStage = opTypeVsStage[opTypeVsStage[\"Total\"]>100]#Filtro a los q tienen mas de 100 entradas\n",
-    "#opTypeVsStage.reset_index(inplace=True)\n",
-    "#opTypeVsStage = opTypeVsStage[(opTypeVsStage[\"Stage\"]==\"Closed Won\") | (opTypeVsStage[\"Stage\"]==\"Closed Lost\")]\n",
-    "#opTypeVsStage[\"Porcentaje\"] = opTypeVsStage[\"Cantidad\"]/opTypeVsStage[\"Total\"]\n",
-    "#opTypeVsStage[\"Opportunity_Type\"] = opTypeVsStage[\"Opportunity_Type\"].apply(lambda x: x.replace(\"Opportunity_Type_\",\"\"))\n",
-    "#opTypeVsStage\n",
-    "\n",
     "opTypeVsStage = opportunities.pivot_table(columns=\"Stage\",index=\"Opportunity_Type\",values=\"Opportunity_ID\", aggfunc=\"count\").fillna(0)\n",
     "opTypeVsStage[\"Total\"] = opportunities[\"Opportunity_Type\"].value_counts()\n",
     "opTypeVsStage = opTypeVsStage.reset_index()\n",
@@ -479,11 +461,9 @@
     "colores = cmap(saltos)\n",
     "\n",
     "plot = sns.barplot(x=\"Opportunity_Type\",y=\"Closed Won\", data=opTypeVsStage, order=opTypeVsStage[\"Opportunity_Type\"],palette=colores)\n",
-    "#plot.set_xticklabels(plot.get_xticklabels(), rotation=30)\n",
     "plt.xlabel(\"Tipo de Oportunidad\")\n",
     "plt.ylabel(\"Porcentaje\")\n",
-    "#plt.title(\"Porcentaje Oportunidades Ganadas\")\n",
-    "plt.savefig(\"img/OpType/PorcentajeClosedWonPorOpType.png\")#,bbox_inches=tr.Bbox([[0, -0.3],[6,4]]))\n",
+    "plt.savefig(\"img/OpType/PorcentajeClosedWonPorOpType.png\")\n",
     "plt.show(plot)"
    ]
   },
@@ -627,8 +607,7 @@
     "plot = sns.barplot(x=\"Opportunity_Type\",y=\"ASP_(converted)\",data=opTypesVsASP, order=opTypesVsASP[\"Opportunity_Type\"],palette=colores)\n",
     "plt.xlabel(\"Tipo de Oportunidad\")\n",
     "plt.ylabel(\"ASP(USD)\")\n",
-    "#plt.title(\"ASP Por Opportunity Type\")\n",
-    "plt.savefig(\"img/OpType/ASPPorOpType.png\")#,bbox_inches=tr.Bbox([[0, -0.3],[6,4]]))\n",
+    "plt.savefig(\"img/OpType/ASPPorOpType.png\")\n",
     "plt.show(plot)"
    ]
   },
@@ -768,13 +747,8 @@
     "plot = sns.barplot(x=\"Opportunity_Type\",y=\"TRF\",data=opTypeVsTRF,order=opTypeVsTRF[\"Opportunity_Type\"],palette=colores)\n",
     "plt.xlabel(\"Tipo de Oportunidad\")\n",
     "plt.ylabel(\"TRF\")\n",
-    "#plt.title(\"TRF Por Opportunity Type\")\n",
-    "plt.savefig(\"img/OpType/TRFPorOpType.png\")#,bbox_inches=tr.Bbox([[0, -0.3],[6,4]]))\n",
-    "plt.show(plot)\n",
-    "#OT 19 y OT 20 son los que venden una cantidad considerable de TRF. \n",
-    "#Este grafico iria mejor en el analisis de TRF, para comparar que afecta mas a la cantidad. \n",
-    "#Por ej, aca el OT 19 vende en promedio 16 toneladas, mientras que la source q mas vende\n",
-    "#llega solo a 4, entonces la cantidad de TRF depende mas del OT que del source"
+    "plt.savefig(\"img/OpType/TRFPorOpType.png\")\n",
+    "plt.show(plot)"
    ]
   },
   {
