--- a/Size Analysis.ipynb
+++ b/Size Analysis.ipynb
@@ -197,7 +197,6 @@
     "fig1 = sns.barplot(sizes.Size, sizes[\"Cantidad\"], palette=colores)\n",
     "plt.xlabel(\"Tamaño\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Cantidad de apariciones por tamaño\")\n",
     "plt.savefig(\"img/Size/CantidadSize.png\")\n",
     "plt.show(fig1)"
    ]
@@ -230,7 +229,6 @@
     "fig1 = sns.barplot(sizes.Size, sizes[\"Cantidad\"], palette=colores)\n",
     "plt.xlabel(\"Tamaño\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Cantidad de apariciones por tamaño\")\n",
     "plt.savefig(\"img/Size/CantidadSizeMasDe100.png\")\n",
     "plt.show(fig1)"
    ]
@@ -344,10 +342,8 @@
     "fig1 = sns.barplot(x=\"Tamaño\",y=\"ASP(Dolar)\",data=aspBySize, palette=colores)\n",
     "plt.xlabel(\"Tamaño\")\n",
     "plt.ylabel(\"ASP(Dolar)\")\n",
-    "#plt.title(\"ASP por Tamaño\")\n",
     "plt.savefig(\"img/Size/ASPPorSize.png\")\n",
-    "plt.show(fig1)\n",
-    "#No me dice nada esto, los precios son muy parecidos"
+    "plt.show(fig1)"
    ]
   },
   {
@@ -452,21 +448,12 @@
     }
    ],
    "source": [
-    "#sizesVsStage = opportunities.pivot_table(index=\"Size\",columns=\"Stage\",values=\"Opportunity_ID\",aggfunc=\"count\")\n",
-    "#sizesVsStage[\"Total\"] = opportunities[\"Size\"].value_counts()\n",
-    "#sizesVsStage[\"Closed Lost Percentage\"] = sizesVsStage[\"Closed Lost\"]/sizesVsStage[\"Total\"]\n",
-    "#sizesVsStage = sizesVsStage.reset_index()\n",
-    "#sizesVsStage.rename(columns={\"Closed Lost Percentage\":\"Porcentaje Closed Lost\", \"Size\":\"Tamaño\"},inplace=True)\n",
-    "#sizesVsStage = sizesVsStage[sizesVsStage[\"Total\"]>100]\n",
-    "#sizesVsStage\n",
-    "\n",
     "sizesVsStage = opportunities.groupby([\"Size\",\"Stage\"]).agg({\"Opportunity_ID\":\"count\"})#Consigo la cantidad de veces de cada Stage por cada source\n",
     "sizesVsStage = sizesVsStage.reset_index()\n",
     "sizesVsStage.rename(columns={\"Opportunity_ID\":\"Cantidad\"},inplace = True)\n",
     "total = sizesVsStage.groupby(\"Size\").agg({\"Cantidad\":\"sum\"}) #La cantidad total de veces que aparece source\n",
     "sizesVsStage.set_index(\"Size\",inplace=True)\n",
     "sizesVsStage[\"Total\"] = total[\"Cantidad\"]\n",
-    "#sizesVsStage = sizesVsStage[sizesVsStage[\"Total\"]>100]#Filtro a los q tienen mas de 100 entradas\n",
     "sizesVsStage.reset_index(inplace=True)\n",
     "sizesVsStage = sizesVsStage[sizesVsStage[\"Size\"] != \"None\"]\n",
     "sizesVsStage[\"Cantidad\"] = sizesVsStage[\"Cantidad\"]/sizesVsStage[\"Total\"]\n",
@@ -499,7 +486,6 @@
     "fig1 = sns.barplot(x=\"Size\",y=\"Cantidad\",hue=\"Stage\",data=sizesVsStage, palette=colores)\n",
     "plt.xlabel(\"Tamaño\")\n",
     "plt.ylabel(\"Porcentaje\")\n",
-    "#plt.title(\"Stage por Size\")\n",
     "plt.savefig(\"img/Size/StagePorSize.png\")\n",
     "plt.show(fig1)"
    ]
@@ -531,7 +517,6 @@
     "fig1 = sns.barplot(x=\"Size\",y=\"Cantidad\",hue=\"Stage\",data=sizesVsStage, palette=colores)\n",
     "plt.xlabel(\"Tamaño\")\n",
     "plt.ylabel(\"Porcentaje\")\n",
-    "#plt.title(\"Stage por Size\")\n",
     "plt.savefig(\"img/Size/StagePorSizeSinFiltrar.png\")\n",
     "plt.show(fig1)"
    ]
@@ -792,7 +777,6 @@
     "fig1 = sns.barplot(x=\"Product_Type\",y=\"Cantidad\",hue=\"Size\",data=sizeVsProductType, palette=colores)\n",
     "plt.xlabel(\"Tipo de Producto\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Tamaños por Tipo de Producto\")\n",
     "fig1.set_xticklabels(fig1.get_xticklabels(), rotation=15)\n",
     "plt.savefig(\"img/Size/SizeVsProductType.png\",bbox_inches=tr.Bbox([[0, -0.3],[6,4]]))\n",
     "plt.show(fig1)"
@@ -1004,8 +988,6 @@
     "fig1 = sns.barplot(x=\"Product_Type\",y=\"Cantidad\",hue=\"Size\",data=sizeVsProductType,palette=colores)\n",
     "plt.xlabel(\"Tipo de Producto\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Porduct Type por Size\")\n",
-    "#fig1.set_xticklabels(fig1.get_xticklabels(), rotation=25)\n",
     "plt.savefig(\"img/Size/SizeVsProductTypeFiltrado.png\")\n",
     "plt.show(fig1)\n",
     "#PUEDO VER QUE PARA CAD PRODUCT TYPE PREVALECE EL SIZE 3, SEGUIDO DEL SIZE 4 Y ALGUNOS TIENEN OTHER. LO DE OTHER - OTHER TIENE SENTIDO XQ ES GENERICO"
