--- a/Source Analysis.ipynb
+++ b/Source Analysis.ipynb
@@ -262,7 +262,6 @@
     "fig1 = sns.catplot(y=\"Cantidad\", x=\"Source\",data=sources,kind=\"bar\",palette=colores) #Cuantas veces aparece cada fuente\n",
     "plt.xlabel(\"Fuente\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Cantidad de apariciones de cada fuente considerando None\")\n",
     "plt.savefig(\"img/Source/CantidadSource.png\")\n",
     "plt.show(fig1)\n",
     "\n",
@@ -270,7 +269,6 @@
     "fig2 = sns.catplot(y=\"Cantidad\", x=\"Source\",data=sources,kind=\"bar\",palette=colores,order=sources[\"Source\"]) #Cuantas veces aparece cada fuente sin contar None\n",
     "plt.xlabel(\"Fuente\")\n",
     "plt.ylabel(\"Cantidad\")\n",
-    "#plt.title(\"Cantidad de apariciones de cada fuente\")\n",
     "plt.savefig(\"img/Source/CantidadSourceSinNone.png\")\n",
     "plt.show(fig2)\n"
    ]
@@ -550,7 +548,6 @@
     "plt.savefig(\"img/Source/PorcentajeClosedWonPorSource.png\")\n",
     "plt.xlabel(\"Sources\")\n",
     "plt.ylabel(\"Porcentaje Oportunidades Ganadas\")\n",
-    "#plt.title(\"Porcentaje Oportunidades Ganadas por Source considerando None\")\n",
     "plt.show(fig1)\n",
     "\n",
     "sourcesVsWonWithoutNone = sourcesVsWon[sourcesVsWon[\"Source\"] != \"None\"] #Saco los None\n",
@@ -558,7 +555,6 @@
     "plt.savefig(\"img/Source/PorcentajeClosedWonPorSourceSinNone.png\")\n",
     "plt.xlabel(\"Sources\")\n",
     "plt.ylabel(\"Porcentaje Oportunidades Ganadas\")\n",
-    "#plt.title(\"Porcentaje Oportunidades Ganadas por Source\")\n",
     "plt.show(fig2)"
    ]
   },
@@ -732,26 +728,18 @@
     "saltos = np.linspace(0.7, 0.3, 6)\n",
     "colores = cmap(saltos)\n",
     "\n",
-    "#avg = sourcesVsWonFiltered[\"Closed Won\"].mean()\n",
     "fig1 = sns.catplot(x=\"Source\", y=\"Closed Won\",kind=\"bar\", data=sourcesVsWonFiltered,palette=colores)\n",
     "plt.xlabel(\"Fuente\")\n",
     "plt.ylabel(\"Porcentaje Oportunidades Ganadas\")\n",
-    "#plt.title(\"Porcentaje Oportunidades Ganadas por fuente\")\n",
-    "#plt.plot([-0.5, 4.5], [avg, avg], color='green', linestyle=':', linewidth=2)\n",
     "plt.savefig(\"img/Source/PorcentajeClosedWonPorSourceMenosDe100.png\")\n",
     "plt.show(fig1)\n",
     "\n",
     "sourcesVsWonFilteredWithoutNone = sourcesVsWonFiltered.drop(axis=0, labels=0) #Saco los None\n",
-    "#avg = sourcesVsWonFilteredWithoutNone[\"Closed Won\"].mean()\n",
     "fig2 = sns.catplot(x=\"Source\", y=\"Closed Won\",kind=\"bar\", data=sourcesVsWonFilteredWithoutNone,order=sourcesVsWonFilteredWithoutNone[\"Source\"],palette=colores)\n",
     "plt.xlabel(\"Fuente\")\n",
     "plt.ylabel(\"Porcentaje Oportunidades Ganadas\")\n",
-    "#plt.title(\"Porcentaje Oportunidades Ganadas por fuente\")\n",
-    "#plt.plot([-0.5, 4.5], [avg, avg], color='green', linestyle=':', linewidth=2)\n",
     "plt.savefig(\"img/Source/PorcentajeClosedWonPorSourceSinNoneMenosDe100.png\")\n",
-    "plt.show(fig2)\n",
-    "\n",
-    "#VER EL TEMA DE LOS COLORES"
+    "plt.show(fig2)"
    ]
   },
   {
@@ -1129,11 +1117,9 @@
     "saltos = np.linspace(0.7, 0.3, 5)\n",
     "colores = cmap(saltos)\n",
     "\n",
-    "#avg = aspBySource[\"ASP(USD)\"].mean()\n",
     "fig1 = sns.catplot(kind=\"bar\",x=\"Source\",y=\"ASP(USD)\",data=aspBySource,order=aspBySource[\"Source\"], palette=colores)\n",
     "plt.xlabel(\"Fuente\")\n",
     "plt.ylabel(\"ASP(USD)\")\n",
-    "#plt.title(\"ASP promedio de cada fuente\")\n",
     "plt.savefig(\"img/Source/ASPPorSource.png\")\n",
     "plt.show(fig1)\n",
     "\n",
@@ -1261,12 +1247,9 @@
     "colores = cmap(saltos)\n",
     "\n",
     "\n",
-    "#avg = sourceVsTRF[\"TRF\"].mean()\n",
     "plot = sns.barplot(x=\"Source\",y=\"TRF\",data=sourceVsTRF, order=sourceVsTRF[\"Source\"], palette=colores)\n",
     "plt.xlabel(\"Fuente\")\n",
     "plt.ylabel(\"TRF\")\n",
-    "#plt.title(\"TRF promedio de cada fuente\")\n",
-    "#plt.plot([-0.5, 4.5], [avg, avg], color='green', linestyle=':', linewidth=2)\n",
     "plt.savefig(\"img/Source/TRFPorSource.png\")\n",
     "plt.show(fig1)"
    ]
