agrego dos ultimos graficos

--- a/AnalisisGeografico.ipynb
+++ b/AnalisisGeografico.ipynb
@@ -2115,7 +2115,7 @@
    "cell_type": "code",
    "execution_count": 483,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2155,6 +2155,363 @@
     "plt.title(\"Mean of taxable amount per Region\", loc='center', size = 18)\n",
     "plt.xlabel('(Millons of USD)', size = 16)\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 485,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "territorios = datos[['Territory', 'Stage']]\n",
+    "filtro =  ['Closed Lost','Closed Won']\n",
+    "territorios = territorios [territorios['Stage'].isin(filtro) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 490,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "territorios['stage_num'] = territorios['Stage'].replace(['Closed Lost', 'Closed Won'], [0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 492,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del territorios['Stage']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 500,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Territory</th>\n",
+       "      <th>stage_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NW America</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NW America</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NW America</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16939</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16940</th>\n",
+       "      <td>NE America</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16942</th>\n",
+       "      <td>Austria</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16945</th>\n",
+       "      <td>NE America</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16946</th>\n",
+       "      <td>NE America</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9791 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Territory  stage_num\n",
+       "0            None          0\n",
+       "1            None          1\n",
+       "2      NW America          1\n",
+       "3      NW America          0\n",
+       "4      NW America          0\n",
+       "...           ...        ...\n",
+       "16939      Norway          1\n",
+       "16940  NE America          0\n",
+       "16942     Austria          1\n",
+       "16945  NE America          0\n",
+       "16946  NE America          0\n",
+       "\n",
+       "[9791 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 500,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "territorios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 518,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped = territorios.groupby('Territory').agg([\"mean\", \"count\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 519,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped.columns = ['StageMean', 'StageCount']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 520,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped = grouped [ grouped['StageCount'] >= 10 ] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 527,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tail = grouped.sort_values('StageMean', ascending=True).head(5).reset_index()[]\n",
+    "top = grouped.sort_values('StageMean', ascending=True).head(5).reset_index()['Territory']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 528,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Territory</th>\n",
+       "      <th>StageMean</th>\n",
+       "      <th>StageCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UAE (Dubai)</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SW America</td>\n",
+       "      <td>0.153846</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jordan</td>\n",
+       "      <td>0.259259</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Territory  StageMean  StageCount\n",
+       "0  UAE (Dubai)   0.071429          28\n",
+       "1   SW America   0.153846         104\n",
+       "2       Turkey   0.166667          18\n",
+       "3       Taiwan   0.250000          28\n",
+       "4       Jordan   0.259259          81"
+      ]
+     },
+     "execution_count": 528,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tail "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 529,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Territory</th>\n",
+       "      <th>StageMean</th>\n",
+       "      <th>StageCount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UAE (Dubai)</td>\n",
+       "      <td>0.071429</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SW America</td>\n",
+       "      <td>0.153846</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jordan</td>\n",
+       "      <td>0.259259</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Territory  StageMean  StageCount\n",
+       "0  UAE (Dubai)   0.071429          28\n",
+       "1   SW America   0.153846         104\n",
+       "2       Turkey   0.166667          18\n",
+       "3       Taiwan   0.250000          28\n",
+       "4       Jordan   0.259259          81"
+      ]
+     },
+     "execution_count": 529,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top"
    ]
   },
   {
